# ChangeLog for dev-dotnet/gtkhtml-sharp
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gtkhtml-sharp/ChangeLog,v 1.36 2005/10/16 07:03:49 latexer Exp $

  16 Oct 2005; Peter Johanson <latexer@gentoo.org>
  -gtkhtml-sharp-1.0.8.ebuild, -gtkhtml-sharp-2.3.90.ebuild,
  -gtkhtml-sharp-2.5.90.ebuild:
  Remove a few older versions.

*gtkhtml-sharp-2.5.92 (16 Oct 2005)
*gtkhtml-sharp-2.3.92 (16 Oct 2005)

  16 Oct 2005; Peter Johanson <latexer@gentoo.org>
  +gtkhtml-sharp-2.3.92.ebuild, +gtkhtml-sharp-2.5.92.ebuild:
  Bump.

  16 Oct 2005; Joseph Jezak <josejx@gentoo.org> gtkhtml-sharp-1.0.10.ebuild:
  Marked ppc stable for bug #103253.

*gtkhtml-sharp-2.5.91 (16 Sep 2005)
*gtkhtml-sharp-2.3.91 (16 Sep 2005)

  16 Sep 2005; Peter Johanson <latexer@gentoo.org>
  +gtkhtml-sharp-2.3.91.ebuild, gtkhtml-sharp-2.5.90.ebuild,
  +gtkhtml-sharp-2.5.91.ebuild:
  Bump.

*gtkhtml-sharp-2.5.90 (17 Aug 2005)
*gtkhtml-sharp-2.3.90 (17 Aug 2005)

  17 Aug 2005; Peter Johanson <latexer@gentoo.org>
  -gtkhtml-sharp-1.0.6.ebuild, -gtkhtml-sharp-1.9.3.1.ebuild,
  -gtkhtml-sharp-1.9.5.ebuild, +gtkhtml-sharp-2.3.90.ebuild,
  -gtkhtml-sharp-2.5.5.ebuild, +gtkhtml-sharp-2.5.90.ebuild:
  Bump to new beta releases, and clean out lots of older stuff.

  05 Aug 2005; Peter Johanson <latexer@gentoo.org>
  gtkhtml-sharp-1.0.10.ebuild:
  Stable on x86.

*gtkhtml-sharp-1.0.10 (24 May 2005)
*gtkhtml-sharp-1.0.8-r1 (24 May 2005)

  24 May 2005; Peter Johanson <latexer@gentoo.org>
  +gtkhtml-sharp-1.0.8-r1.ebuild, +gtkhtml-sharp-1.0.10.ebuild:
  Revision bump to force out pkg-config fix, and bump to latest 1.0.x release.

  22 May 2005; Tom Martin <slarti@gentoo.org> gtkhtml-sharp-1.0.8.ebuild:
  More ~amd64.

  21 May 2005; Peter Johanson <latexer@gentoo.org> :
  Digest of new diff that fixes bug #93433.

  21 May 2005; Tom Martin <slarti@gentoo.org> gtkhtml-sharp-2.5.5.ebuild:
  Marked ~amd64.
