@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/gtkhtml-sharp
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gtkhtml-sharp/ChangeLog,v 1.36 2005/10/16 07:03:49 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gtkhtml-sharp/ChangeLog,v 1.37 2005/10/28 04:58:38 latexer Exp $
+
+  28 Oct 2005; Peter Johanson <latexer@gentoo.org>
+  gtkhtml-sharp-2.3.92.ebuild, gtkhtml-sharp-2.5.92.ebuild:
+  Add another version of libgtkhtml that will satisfy the dep. See bug #110520.
 
   16 Oct 2005; Peter Johanson <latexer@gentoo.org>
   -gtkhtml-sharp-1.0.8.ebuild, -gtkhtml-sharp-2.3.90.ebuild,
